# pytorch_vision_framework

./: .gitignore  LICENSE  README.md  pyproject.toml
conf/: config.yml
pytorch_vision_framework/: data_loading.py  datasets.py  model.py  secondary_module.py
pytorch_vision_workflow/: data_exploration.py  data_loading.py  datasets.py  model.py  secondary_module.py  workflow_class.py
